--- a/src/partyBundle/Resources/views/Party/index.html.twig
+++ b/src/partyBundle/Resources/views/Party/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block body -%}
+{% block body %}
     <h1>Party list</h1>
 
     <table class="records_list">
@@ -10,22 +10,24 @@
                 <th>Nom</th>
                 <th>Date</th>
                 <th>Lieu</th>
-                <th>Nblimit</th>
+                <th>Nombre max de partiipant</th>
                 <th>Actions</th>
+                <th>Nombre de participant</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('party_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('party_inscription', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
                 <td>{{ entity.nom }}</td>
                 <td>{% if entity.date %}{{ entity.date|date('Y-m-d H:i:s') }}{% endif %}</td>
                 <td>{{ entity.lieu }}</td>
                 <td>{{ entity.nblimit }}</td>
+                <td>{{ entity.nbPersonne }}</td>
                 <td>
                 <ul>
                     <li>
-                        <a href="{{ path('party_show', { 'id': entity.id }) }}">show</a>
+                        <a href="{{ path('party_inscription', { 'id': entity.id }) }}">Inscription</a>
                     </li>
                 </ul>
                 </td>
